# juriscraper

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  AbstractSite.py  CHANGES.md  CONTRIBUTING.md  DeferringList.py  GenericSite.py  LICENSE  MANIFEST.in  Makefile  OpinionSite.py  OralArgumentSite.py  README.md  README.rst  ScrapeTester.py  YieldingList.py  __init__.py  app.py  app_court.py  app_head_get.py  app_utils.py  bva_example.html  check_scrapers.py  document.json  pyproject.toml  qodana.yaml  readme.md  requirements-dev.txt  requirements.txt  sample_caller.py  sample_caller2.py  sample_data.xml  sample_docket_caller.py  sample_state_scraper_caller.py  (+15 more)
.circleci/: config.TEST-MULTIPLE-PYTHON-VERSION-SEPERATE-CACHES.yml  config.TEST-MULTIPLE-PYTHON-VERSIONS.yml  config.WITHOUT-PYPI-DEPLOY.yml  config.yml
.github/: FUNDING.yml  dependabot.yml
casemine/: CaseMineCrawl.py  DuplicateRecordException.py  __init__.py  casemineDB.py  casemine_util.py  constants.py  download_processed_2_pdfs.py  juriscapper_config.py  proxy_manager.py  runner.py  runner2.py  runner3.py  sample.py  test.py  test2.py
docs/: pacer_client_code.md
fdsys/: FDSysSite.py  annotated_mods.xml  court_locations.json  court_names.json  fdsys_court_names_2014.json  first_8_words_string.json  first_five_words.json  first_five_words_counter.json  scrape_court_names.py
juriscraper/: AbstractSite.py  ClusterSite.py  DeferringList.py  NewOpinionSite.py  OpinionSite.py  OpinionSiteAspx.py  OpinionSiteLinear.py  OpinionSiteLinearProxyRequestHandler.py  OpinionSiteLinearRateLimited.py  OpinionSiteLinearWebDriven.py  OpinionSiteRateLimited.py  OpinionSiteWebDriven.py  OralArgumentSite.py  OralArgumentSiteLinear.py  OralArgumentSiteLinearWebDriven.py  ProxyRequestHandler.py  RateLimited.py  RateLimitedSite.py  RateLimiter.py  WebDriven.py  __init__.py  abstract_parser.py  exceptions.py  pacerdocket.py  report.py  sample_caller.py  scraper.py
lib/: date_utils.py  html_utils.py  importer.py  network_utils.py  parse_dates.py  ssl_adapters.py  string_utils.py  tests.py
opinions/: __init__.py  opinion_template.py
oral_args/: oral_argument_template.py
tests/: __init__.py  test_everything.py  tests.py  (+5 more)
(+10599 files in other folders)
